# backend/models/auth.go
@@ -14,16 +14,3 @@ type LoginBody struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required"`
 }
-
-type RefreshBody struct {
-	RefreshToken string `json:"refresh_token" validate:"required"`
-}
-
-type TokenResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
-
-type AccessTokenResponse struct {
-	AccessToken string `json:"access_token"`
-}
